<resources>

    <string name="app_name">mobile-spotter</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>

    <!--    common-->
    <string name="common_empty">Ничего не найдено :(</string>
    <string name="common_all">Все</string>
    <string name="common_android">Только Android</string>
    <string name="common_ios">Только iOS</string>
    <string name="common_cancel">Отмена</string>
    <string name="common_ok">Ок</string>
    <string name="common_check_all">Выбрать все</string>
    <string name="common_search_parameters">Настройки</string>
    <string name="common_resolution">Разрешение</string>
    <string name="common_choose">Выбрать…</string>
    <string name="common_rfid_put_card">Приложите RFID-чип к считывателю</string>
    <string name="common_retry_request">Повторить</string>
    <string name="common_not_defined">Не указан</string>
    <string name="common_navigate">Перейти</string>
    <string name="common_whitespace_separator">%s %s</string>
    <string name="common_whitespace_double_separator">%s %s %s</string>
    <string name="common_whitespace_brackets_separator">%s (%s)</string>

    <!--    departments-->
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="qa">Тестирование</string>
    <string name="backend_java">Backend Java</string>
    <string name="backend_php">Backend Php</string>
    <string name="backend_python">Backend Python</string>
    <string name="frontend_js">Frontend JS</string>
    <string name="frontend_tcs">Frontend TCS</string>
    <string name="service">Служебный</string>
    <string name="head">Разработка</string>

    <!--    device list-->
    <string name="device_list_toolbar_title">Выбор устройства</string>
    <string name="device_list_only_free">Только свободные</string>
    <string name="device_list_only_organization">Не показывать личные устройства</string>
    <string name="device_list_only_my">Только взятые мной устройства</string>
    <string name="device_list_free">Свободен</string>
    <string name="device_list_busy">%s</string>
    <string name="device_list_choose_value">Выберите значение</string>
    <string name="device_list_os_version">Версия ОС</string>
    <string name="device_list">Список устройств</string>

    <!--    device details-->
    <string name="device_details_toolbar_title">Подробная информация</string>
    <string name="device_details_factory_name">Заводское название</string>
    <string name="device_details_nickname_title">Народное название</string>
    <string name="device_details_os_title">Операционная система и версия</string>
    <string name="device_details_shell_title">Оболочка</string>
    <string name="device_details_resolution_title">Разрешение экрана</string>
    <string name="device_details_type_title">Тип устройства</string>
    <string name="device_details_comment_title">Комментарий</string>
    <string name="device_details_take_as">ВЗЯТЬ КАК \n%s</string>
    <string name="device_details_return_as">ВЕРНУТЬ КАК \n%s</string>
    <string name="device_details_your_rent">Находится в Вашем пользовании</string>
    <string name="device_details_return">Вернуть</string>
    <string name="device_details_take">Взять</string>
    <string name="device_details_busy">Занят. Арендатор - %s</string>
    <string name="device_details_take_device">Взять устройство</string>
    <string name="device_details_current_user">Текущий пользователь</string>
    <string name="device_details_taken">Устройство успешно взято</string>
    <string name="device_details_returned">Устройство успешно сдано</string>
    <string name="device_details_free">Свободен</string>
    <string name="device_details_user_not_defined">Пользователь не указан</string>

    <!--    settings-->
    <string name="settings_current_user">Текущий пользователь</string>
    <string name="settings_not_defined">Не выбран</string>
    <string name="settings_public_account">Общий аккаунт</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_save">Сохранить</string>
    <string name="settings_current_token">Текущий токен</string>
    <string name="settings_token_saved">Токен сохранен!</string>

    <!--    user list-->
    <string name="user_list_choose_owner">Выбран пользователь: %s</string>
    <string name="user_list_toolbar_title">Выбор пользователя</string>
    <string name="user_list_search_user">Поиск пользователя</string>
    <string name="user_list_search_hint">Иванов Вася</string>
    <string name="common_card">Неизвестная карта</string>
    <string name="device_list_select_user">Выбрать пользователя</string>
    <string name="device_list_reset_user">Сбросить пользователя</string>
    <string name="device_list_choose_device">Выберите устройство</string>

    <string name="device_list_take_n">Взять %s</string>
    <string name="device_list_return_n">Вернуть %s</string>
    <string name="device_list_take_and_return">Взять %s, вернуть %s</string>
    <string name="common_comma_separator">,&#32;</string>
    <string name="device_list_user_reset">Пользователь сброшен</string>
    <string name="device_list_success">Устройства успешно назначены</string>
    <string name="common_unknown_card">Неизвестная карта</string>
    <string name="common_network_error">Ошибка загрузки данных</string>
    <string name="device_list_as_from_server">Как с сервера</string>
    <string name="device_list_by_version">По версии</string>
    <string name="device_list_increasing">По возрастанию</string>
    <string name="device_list_decreasing">По убыванию</string>
    <string name="device_list_by_strings">Строками</string>
    <string name="device_list_by_tiles">Плиткой</string>

</resources>